fix alignment

--- a/src/style/menu.styl
+++ b/src/style/menu.styl
@@ -64,6 +64,8 @@ $menuWidth = 344px
     line-height: 12px
     position: relative
     cursor: pointer
+    &:hover
+      background: #f9ec9b
   .dish-price
   .dish-title
     position: absolute
